summary data for montly comparison api added
